# rtcproxy

./: LICENSE  Makefile.am  Makefile.in  README.md  config.h  configure  main.c  makeann.c  rtp.c  rtp.h  rtp_resizer.c  rtp_resizer.h  rtp_server.c  rtp_transcoder.c  rtp_transcoder.h  rtpp_command.c  rtpp_command.h  rtpp_defines.h  rtpp_dtls.c  rtpp_dtls.h  rtpp_log.c  rtpp_log.h  rtpp_mem.c  rtpp_mem.h  rtpp_parse.c  rtpp_parse.h  rtpp_record.c  rtpp_record.h  rtpp_session.c  rtpp_session.h  rtpp_srtp.c  rtpp_srtp.h  rtpp_stun.c  rtpp_stun.h  rtpp_syslog_async.c  rtpp_trans_plugin.c  rtpp_trans_plugin.h  rtpp_util.c  rtpp_util.h  ssl_identity.c  (+1 more)
openssl/: .gitignore  Configure
rpm/: rtpproxy.init  rtpproxy.spec
srtp/: .gitignore  Makefile.in
srtp/crypto/include/: err.h
srtp/crypto/kernel/: err.c
srtp/include/: srtp_wrapper.h
srtp/srtp/: srtp.c  srtp_wrapper.c
trans/: codecs.h  itrans.h
